...
  // 🔌 Short Circuit

  return (
    <>
      <div
        className="--lg:grid-cols-3 grid grid-cols-1 gap-4 md:grid-cols-2 md:gap-8 lg:gap-12"
        data-testid="dashboard-content-grid"
      >
        <div className="col-span-2 md:col-span-1">
          <DashboardDeferredCard
            errorText="Couldn’t load queue health."
            fallback={<DashboardPrCardsSkeleton />}
            resolve={core}
...
