...
      />

      <div className="flex flex-1 flex-col justify-end p-4 pt-2 md:p-8 md:pt-4 lg:p-12 lg:pt-4">
        {isEmptyThread && (
          <div className="flex flex-1 flex-col items-center justify-center">
            <h1 className="text-center text-2xl">
              What would you like to build today?
            </h1>
            <p className="text-muted-foreground mt-2 text-sm">
              OpenThrottle is a platform for building software, iteratively, and
              securely.
            </p>
          </div>
...
