...
  GetPlanCountsByStatusDocument,
  GetPlansByStatusDocument,
} from '~/__generated__/graphql';
import { SITE_TITLE } from '~/global/config/settings';
import { PlansIntroduction } from '~/routing/plans/components/PlansIntroduction';
import { PlansStats } from '~/routing/plans/components/PlansStats';
import { PlansTable } from '~/routing/plans/components/PlansTable';
import { PlansToolbar } from '~/routing/plans/components/PlansToolbar';
import { parseStatusesFromSearchParams } from '~/routing/plans/config/status-options';
import { PLANS_ONBOARDING } from '~/routing/plans/data/data.copy';
import {
  buildStatusFilterUrls,
  hasActivePlansFilters,
  parseAssigneesFromSearchParams,
  parsePlansSortFromSearch,
} from '~/routing/plans/utils/parsers';

export const handle = {
  breadcrumb: () => 'Plans',
  links: (_match: RouteMatch) => [],
};

export const loader = async (args: Route.LoaderArgs) => {
  const url = args.url;

...
