...
  actionData?: { error?: string } | null;
  className?: string;
  planId: string;
  task?: GetTaskByIdQuery['task'] | null;
}

export const TaskForm = (props: TaskFormProps): React.ReactElement => {
  const { actionData, className, planId, task } = props;

  // Hooks

  // Setup
  const error = actionData?.error;
...
          <Input name="planId" type="hidden" value={planId} />
          {isEdit && task ? (
            <Input name="id" type="hidden" value={task.id} />
          ) : null}

          <div className="space-y-2">
            <Label htmlFor="task-title">Title</Label>
            <Input
              defaultValue={task?.title ?? ''}
              id="task-title"
              name="title"
              placeholder="Task title"
              required={true}
...
